[gd_scene load_steps=14 format=3 uid="uid://bw254wnisp7ip"]

[ext_resource type="Script" path="res://scenes/ui/itemsMenu/items_menu.gd" id="1_0q3rw"]
[ext_resource type="FontFile" uid="uid://dkn1tuxa3ybyj" path="res://textures/ui/Font/OpenSans-Semibold.ttf" id="2_yngwi"]
[ext_resource type="Script" path="res://scenes/rand_audio_stream_player.gd" id="3_xy1q2"]
[ext_resource type="AudioStream" uid="uid://cwuwxpfd10png" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.1.mp3" id="4_vbcgc"]
[ext_resource type="AudioStream" uid="uid://bhukn3snlsd8h" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.2.mp3" id="5_74j4b"]
[ext_resource type="AudioStream" uid="uid://dgvwg825t8ejp" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.3.mp3" id="6_cijo4"]
[ext_resource type="AudioStream" uid="uid://b55saewa5u3rv" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Open/Menu Open 1.4.mp3" id="7_j45e0"]
[ext_resource type="AudioStream" uid="uid://c2x8eonkds843" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.1.mp3" id="8_d7bv7"]
[ext_resource type="AudioStream" uid="uid://cab5mq8xhuj1g" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.2.mp3" id="9_xxy2n"]
[ext_resource type="AudioStream" uid="uid://bf64g2wfbdo8n" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.3.mp3" id="10_mf3xs"]
[ext_resource type="AudioStream" uid="uid://brf4xjy4yi5pu" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Menu Close/Menu Close 1.4.mp3" id="11_rxgaq"]
[ext_resource type="AudioStream" uid="uid://mqwkbuokfl1q" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 1.mp3" id="12_8dhs5"]
[ext_resource type="AudioStream" uid="uid://bx276jn07ckcy" path="res://audio/sfx/Inner Game/Inner Game UI_Buttons/Select Menu Option/Select Menu Option 2.mp3" id="13_v5myr"]

[node name="ItemsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0q3rw")

[node name="BackGround" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 288.0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(1e-05, 1)
mouse_filter = 2

[node name="Back" type="ColorRect" parent="BackGround"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.145098, 0.137255, 0.25098, 0.74902)

[node name="Labels" type="Control" parent="BackGround"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="BackGround/Labels"]
offset_left = 89.0
offset_top = 85.0
offset_right = 192.0
offset_bottom = 143.0
theme_override_fonts/font = ExtResource("2_yngwi")
theme_override_font_sizes/font_size = 40
text = "Items"

[node name="ColorRect" type="ColorRect" parent="BackGround/Labels/Title"]
offset_left = 6.0
offset_top = 61.0
offset_right = 1470.0
offset_bottom = 65.0

[node name="Selection" type="VBoxContainer" parent="."]
offset_left = 410.0
offset_top = 196.0
offset_right = 450.0
offset_bottom = 236.0
theme_override_constants/separation = 20

[node name="OpenAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_xy1q2")
samples = [ExtResource("4_vbcgc"), ExtResource("5_74j4b"), ExtResource("6_cijo4"), ExtResource("7_j45e0")]

[node name="CloseAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_xy1q2")
samples = [ExtResource("8_d7bv7"), ExtResource("9_xxy2n"), ExtResource("10_mf3xs"), ExtResource("11_rxgaq")]

[node name="PressedAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_xy1q2")
samples = [ExtResource("12_8dhs5"), ExtResource("13_v5myr")]
